@@ -1,3 +1,6 @@
+2005-05-27 rixed@free.fr
+	* CLocking the 940T to full speed.
+
 2005-05-25 rixed@free.fr
 	* OSD uses colors.
 	* Fix OSD rendering of chars > 128 on PC.
